# MassiveNumbers

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
MassiveNumber/: CMakeLists.txt  main.cpp  massive_int.cpp  massive_int.hpp
